Update: Swagger corrigido e melhorado
