# PAWTPGrupo04/api/routes/users.js
@@ -13,14 +13,12 @@ userrouter.get('/utentes/:id', userController.getUtenteUserByCC); // ID => CC
 userrouter.get('/tecnicos/:id', userController.getTecnicoUserByCC);
 userrouter.get('/:id', userController.getUserByID);
 
-userrouter.put('/', userController.updateUserInformation);
+userrouter.put('/:id', userController.updateUserInformation);
 
 userrouter.post('/', userController.registerUser);
 
-userrouter.delete('/', userController.deleteUser);
+userrouter.delete('/:id', userController.deleteUser);
 
 //userrouter.get('/userreq/:CC',requestController.getUserPedido); //Funciona, provavelmente deprecated
-
-userrouter.post('/', userController.registerUser);
 
 module.exports = userrouter;
